Release 1.2.1